--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<version>0.3.0-SNAPSHOT</version>
 
 	<name>bioimage.io Java specification</name>
-	<description>This is the Java implementation of the bioimage.io model specification.</description>
+	<description>Java implementation of the bioimage.io model specification.</description>
 	<url>https://bioimage.io/</url>
 	<inceptionYear>2020</inceptionYear>
 	<organization>
