Changes to handle version 0.3.x, currently 0.3.2 in IO

--- a/src/test/resources/example.0.3.1.model.yaml
+++ b/src/test/resources/example.0.3.1.model.yaml
@@ -4,7 +4,8 @@ cite:
   - text: |-
       my citation
     doi: https://arxiv.org/abs/2005.02987
-authors: authors
+authors:
+  - name: authors
 documentation: model documentation
 tags: [ denoising, unet2d ]
 license: bsd
